[package]
name = "musicbotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
features = ["voice"]

[dependencies.songbird]
version = "0.3.1"
features = ["builtin-queue"]
