[package]
name = "MusicBox"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.19"
env_logger = "0.10.0"

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
features = ["voice"]

[dependencies.songbird]
version = "0.3.1"
features = ["builtin-queue"]

